Refactoring - replaced boolean visited array with integer array to resolve path in WordFinder.

--- a/RuzzleResolver/res/layout/activity_main.xml
+++ b/RuzzleResolver/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_marginTop="30dp"
         android:background="#EC7703"
         android:ems="1"
-        android:inputType="textCapCharacters"
+        android:inputType="textCapCharacters|textNoSuggestions"
         android:maxLength="1"
         android:paddingLeft="10dip" >
     </EditText>
@@ -32,7 +32,7 @@
         android:layout_toRightOf="@+id/editText1"
         android:background="#EC7703"
         android:ems="1"
-        android:inputType="textCapCharacters"
+        android:inputType="textCapCharacters|textNoSuggestions"
         android:maxLength="1"
         android:paddingLeft="10dip" >
     </EditText>
@@ -47,7 +47,7 @@
         android:layout_toRightOf="@+id/editText2"
         android:background="#EC7703"
         android:ems="1"
-        android:inputType="textCapCharacters"
+        android:inputType="textCapCharacters|textNoSuggestions"
         android:maxLength="1"
         android:paddingLeft="10dip" >
     </EditText>
@@ -62,7 +62,7 @@
         android:layout_toRightOf="@+id/editText3"
         android:background="#EC7703"
         android:ems="1"
-        android:inputType="textCapCharacters"
+        android:inputType="textCapCharacters|textNoSuggestions"
         android:maxLength="1"
         android:paddingLeft="10dip" >
     </EditText>
@@ -79,7 +79,7 @@
         android:layout_marginTop="100dp"
         android:background="#EC7703"
         android:ems="1"
-        android:inputType="textCapCharacters"
+        android:inputType="textCapCharacters|textNoSuggestions"
         android:maxLength="1"
         android:paddingLeft="10dip" >
     </EditText>
@@ -94,7 +94,7 @@
         android:layout_toRightOf="@+id/editText5"
         android:background="#EC7703"
         android:ems="1"
-        android:inputType="textCapCharacters"
+        android:inputType="textCapCharacters|textNoSuggestions"
         android:maxLength="1"
         android:paddingLeft="10dip" >
     </EditText>
@@ -109,7 +109,7 @@
         android:layout_toRightOf="@+id/editText6"
         android:background="#EC7703"
         android:ems="1"
-        android:inputType="textCapCharacters"
+        android:inputType="textCapCharacters|textNoSuggestions"
         android:maxLength="1"
         android:paddingLeft="10dip" >
     </EditText>
@@ -124,7 +124,7 @@
         android:layout_toRightOf="@+id/editText7"
         android:background="#EC7703"
         android:ems="1"
-        android:inputType="textCapCharacters"
+        android:inputType="textCapCharacters|textNoSuggestions"
         android:maxLength="1"
         android:paddingLeft="10dip" >
     </EditText>
@@ -141,7 +141,7 @@
         android:layout_marginTop="170dp"
         android:background="#EC7703"
         android:ems="1"
-        android:inputType="textCapCharacters"
+        android:inputType="textCapCharacters|textNoSuggestions"
         android:maxLength="1"
         android:paddingLeft="10dip" >
     </EditText>
@@ -156,7 +156,7 @@
         android:layout_toRightOf="@+id/editText9"
         android:background="#EC7703"
         android:ems="1"
-        android:inputType="textCapCharacters"
+        android:inputType="textCapCharacters|textNoSuggestions"
         android:maxLength="1"
         android:paddingLeft="10dip" >
     </EditText>
@@ -171,7 +171,7 @@
         android:layout_toRightOf="@+id/editText10"
         android:background="#EC7703"
         android:ems="1"
-        android:inputType="textCapCharacters"
+        android:inputType="textCapCharacters|textNoSuggestions"
         android:maxLength="1"
         android:paddingLeft="10dip" >
     </EditText>
@@ -186,7 +186,7 @@
         android:layout_toRightOf="@+id/editText11"
         android:background="#EC7703"
         android:ems="1"
-        android:inputType="textCapCharacters"
+        android:inputType="textCapCharacters|textNoSuggestions"
         android:maxLength="1"
         android:paddingLeft="10dip" >
     </EditText>
@@ -203,7 +203,7 @@
         android:layout_marginTop="240dp"
         android:background="#EC7703"
         android:ems="1"
-        android:inputType="textCapCharacters"
+        android:inputType="textCapCharacters|textNoSuggestions"
         android:maxLength="1"
         android:paddingLeft="10dip" >
     </EditText>
@@ -218,7 +218,7 @@
         android:layout_toRightOf="@+id/editText13"
         android:background="#EC7703"
         android:ems="1"
-        android:inputType="textCapCharacters"
+        android:inputType="textCapCharacters|textNoSuggestions"
         android:maxLength="1"
         android:paddingLeft="10dip" >
     </EditText>
@@ -233,7 +233,7 @@
         android:layout_toRightOf="@+id/editText14"
         android:background="#EC7703"
         android:ems="1"
-        android:inputType="textCapCharacters"
+        android:inputType="textCapCharacters|textNoSuggestions"
         android:maxLength="1"
         android:paddingLeft="10dip" >
     </EditText>
@@ -248,7 +248,7 @@
         android:layout_toRightOf="@+id/editText15"
         android:background="#EC7703"
         android:ems="1"
-        android:inputType="textCapCharacters"
+        android:inputType="textCapCharacters|textNoSuggestions"
         android:maxLength="1"
         android:paddingLeft="10dip" >
     </EditText>
