--- a/RuzzleResolver/res/layout/activity_main.xml
+++ b/RuzzleResolver/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layoutGroup"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/main_header_selector"
@@ -162,10 +163,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/editText13"
+        android:layout_below="@+id/editText13"
+        android:layout_marginTop="32dp"
+        android:layout_toLeftOf="@+id/editText15"
+        android:onClick="findWords"
+        android:text="@string/buttonLabel" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/editText15"
         android:layout_alignRight="@+id/editText16"
         android:layout_below="@+id/editText13"
         android:layout_marginTop="32dp"
-        android:onClick="findWords"
-        android:text="@string/buttonLabel" />
+        android:onClick="clear"
+        android:text="@string/clearButtonLabel" />
 
 </RelativeLayout>
